fix header z-index

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,7 +2,7 @@ header {
     &#site-header {
         position: sticky;
         top: 0;
-        z-index: 1;
+        z-index: 2;
         transition: background-color var(--duration) var(--timing);
 
         &.opaque {
